Fix: images on home page now centered on mobile level by changing to 100%

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -618,7 +618,7 @@ footer {
         }
 
         #left-about-heading-1 {
-            width: 50%;
+            width: 100%;
             float: none;
             margin: 0 auto;
         }
@@ -632,7 +632,7 @@ footer {
         }
 
         #left-about-heading-2 {
-            width: 50%;
+            width: 100%;
             float: none;
             margin: 0 auto;
         }
@@ -646,7 +646,7 @@ footer {
         }
 
         #left-about-heading-3 {
-            width: 50%;
+            width: 100%;
             float: none;
             margin: 0 auto;
         }
